maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:45: error: not found: value prendsBiscuit
  prendsBiscuit
  ^